finalize the structure

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <a href="./form.html">form</a>
-      <img src="./assets/toutou.jpg" alt="Photo d'un chien avec des lunettes de soleil">
+      <img src="./assets/images/toutou.jpg" alt="Photo d'un chien avec des lunettes de soleil">
     </div>
   </body>
 </html>
