create header and sass files

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Blog</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Muli:300,400,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
-      <a href="./form.html">form</a>
-      <img src="./assets/images/toutou.jpg" alt="Photo d'un chien avec des lunettes de soleil">
+      <header>
+        <a class="header-brand" href="./index.html">Blog</a>
+        <ul>
+        <li>
+          <a class="header-nav active" href="./index.html">Accueil</a>
+        </li>
+        <li>
+          <a class="header-nav" href="./form.html">Créer un article</a>
+        </li>
+      </ul>
+      </header>
+      <div class="content"></div>
+      <footer>© blog</footer>
     </div>
   </body>
 </html>
