--- a/src/form/form.html
+++ b/src/form/form.html
@@ -33,16 +33,22 @@
             <input type="text" name="author" />
           </div>
           <div class="form-group">
-            <label>Categorie</label>
+            <label>Image de profil</label>
+            <input type="text" name="img" />
+          </div>
+          <div class="form-group">
+            <label>Catégorie</label>
             <input type="text" name="category" />
+          </div>
+          <div class="form-group">
+            <label>titre</label>
+            <input type="text" name="title" />
           </div>
           <div class="form-group">
             <label>Article</label>
             <textarea name="content"></textarea>
           </div>
-          <ul class="text-error" id="errors">
-            
-          </ul>
+          <ul class="text-error" id="errors"></ul>
           <div class="form-btn-container">
             <button class="btn btn-secondary">Annuler</button>
             <button class="btn btn-primary">Sauvegarder</button>
