finish the topbar and the responsive

--- a/src/form/form.html
+++ b/src/form/form.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Blog</title>
+    <script
+      src="https://kit.fontawesome.com/82b84a4e6c.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css?family=Muli:300,400,700&display=swap"
       rel="stylesheet"
@@ -14,16 +18,21 @@
     <div class="container">
       <header>
         <a class="header-brand" href="./index.html">Blog</a>
-        <ul>
-          <li>
-            <a href="./index.html" class="header-nav">Accueil</a>
-          </li>
-          <li>
-            <a href="./form.html" class="header-nav active"
-              >Créer un article</a
-            >
-          </li>
-        </ul>
+        <div class="header-menu">
+          <ul>
+            <li>
+              <a href="./index.html" class="header-nav">Accueil</a>
+            </li>
+            <li>
+              <a href="./form.html" class="header-nav active"
+                >Créer un article</a
+              >
+            </li>
+          </ul>
+          <div class="header-menu-icon">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+        </div>
       </header>
       <div class="content">
         <form>
