--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,7 @@
       </header>
       <div class="content">
         <div class="sidebar">
-          <ul class="categories">
-            <li>Histoire  <strong> ( 3 )</strong> </li>
-            <li>Espace  <strong> ( 4 )</strong> </li>
-            <li>Technologie  <strong> ( 2 )</strong> </li>
-          </ul>
+          <ul class="categories"></ul>
         </div>
         <div class="articles-container"></div>
       </div>
